ArangoDB: use jakarta.json.JsonObject instead of com.arangodb.entity.BaseDocument